# ouro-loop

./: .!91691!.coverage  .coverage  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  README.md  framework.py  index.html  mkdocs.yml  prepare.py  program.md  pyproject.toml  sentinel.py  sitemap.xml
.github/workflows/: test.yml
assets/: benchmark_viz.html
comparison/: index.html
concepts/: index.html
docs/: comparison.md  faq.md  index.md  manifesto.md
docs/examples/: blockchain-l1.md  consumer-product.md  financial-system.md  ml-research.md
docs/guides/: sentinel.md
docs/session-logs/: blockchain-l1.md  consumer-product.md  index.md
examples/: index.html
examples/blockchain-l1/: CLAUDE.md  index.html  phase-plan.md
examples/consumer-product/: CLAUDE.md  index.html  phase-plan.md
examples/django-webapp/: CLAUDE.md
examples/financial-system/: CLAUDE.md  index.html  phase-plan.md
examples/ml-research/: CLAUDE.md  index.html  phase-plan.md
examples/sentinel-review/: CLAUDE.md  sentinel-config.json
faq/: index.html
guides/claude-code/: index.html
guides/cursor/: index.html
guides/quick-start/: index.html
guides/sentinel/: index.html
hooks/: bound-guard.sh  drift-detector.sh  momentum-gate.sh  recall-gate.sh  root-cause-tracker.sh  settings.json.template
manifesto/: index.html
modules/: bound.md  build.md  loop.md  map.md  plan.md  remediation.md  verify.md
ouro_templates/: CLAUDE.md.template  __init__.py
ouro_templates/sentinel/: CLAUDE.md.template  Makefile.sentinel.template  sentinel-config.json.template  sentinel-dashboard.sh.template  sentinel-runner.sh.template
search/: search_index.json
session-logs/: index.html
session-logs/blockchain-l1/: index.html
session-logs/consumer-product/: index.html
templates/: phase-plan.md.template  verify-checklist.md.template
tests/: __init__.py  test_coverage_gaps.py  test_edge_case_fixes.py  test_framework.py  test_framework_extra.py  test_new_features.py  test_prepare.py  test_prepare_extra.py  test_reflective_log.py  test_sentinel.py
