[project]
name = "ouro-loop"
version = "0.1.0"
description = "Give an AI agent a development methodology — boundaries, verification, and feedback loops — and let it act autonomously."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/ouro-loop/ouro-loop"
Repository = "https://github.com/ouro-loop/ouro-loop"

[project.scripts]
ouro = "framework:main"
